<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_addfball"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/menu_addfball" />
        <item
            android:id="@+id/ball"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/menu_ball" />
        <item
            android:id="@+id/nav_ball_all"
            android:icon="@drawable/ic_menu_players_all"
            android:title="@string/menu_ball_all" />
    </group>


    <item android:title="Access Control">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
